# data-ingestor

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml  tasks
api/: api.py  response_models.py
data/: bank.csv
readers/: api_reader.py  csv_reader.py  pdf_reader.py  reader_factory.py
secret_handling/: manager.py  secret.py
sources/: README.md  datetime_helper.py  source.py  test_registry.py
tags/: dimension.py  tag.py  tag_registry.py
tests/: e2e.py  source_validation.py
tests/integration/: test_ingestion.py
tests/unit/: test_readers.py  test_writer.py
writers/: db_writer.py  duckdb_writer.py
