[project]
name = "data-ingestor"
version = "0.1.0"
description = "Multi-modal data ingestion tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.0",
    "pdfplumber>=0.11.6",
    "polars>=1.30.0",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "pyarrow",
    "numpy==2.3.1",
    "pip==25.1.1",
    "pandas==2.3.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.2",
    "fastapi",
    "uvicorn"

]
[tool.pytest.ini_options]
pythonpath = [ "." ]
